--- a/index.html
+++ b/index.html
@@ -10,9 +10,116 @@
     <!-- Styles -->
      <link rel="stylesheet" href="./assets/css/styles.css">
     
+     <!-- Fonts -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sen:wght@700&display=swap" rel="stylesheet">
 
 </head>
 <body>
-    <h1>Project 02</h1>
+  <!-- Header -->
+    <div class="header-sticky">
+      <div class="content">
+        <div class="body">
+          <!-- Logo -->
+            <a href="#!" class="logo-home">
+              <img src="./assets/img/Logo-home.svg" alt="Lesson" class="brand-logo">
+            </a>
+          <!-- Navbar -->
+            <div class="navbar">
+              <ul>
+                <li>
+                  <a href="#" class="nav-link active">Home</a>
+                </li>
+                <li>
+                  <a href="#!" class="nav-link">Courses</a>
+                </li>
+                <li>
+                  <a href="#!" class="nav-link">Pricing</a>
+                </li>
+                <li>
+                  <a href="#!" class="nav-link">Reviews</a>
+                </li>
+              </ul>
+              <!-- Action button -->
+              <a href="#!" class="btn">Sign up</a>
+            </div>
+        </div>
+      </div>
+    </div>
+  <!-- Hero -->
+    <div class="hero">
+      <div class="content">
+        <div class="body">
+          <!-- Block ảnh -->
+          <div class="media-block">
+            <img src="./assets/img/hero-img.jpg" alt="Learn without limits and spread knowledge." class="hero-content">
+            
+            <!-- Hero-summary -->
+            <div class="hero-summary">
+              <!-- item 1 -->
+              <div class="item">
+                <div class="icon">
+                  <img src="./assets/img/icon UI-UX Design.svg" alt="Ui/Ux design">
+                </div>
+                <div class="info">
+                  <div class="label">20 Courses</div>
+                  <div class="tittle">UI/UX Design</div>
+                </div>
+              </div>
+
+              <!-- item 2 -->
+                <div class="item">
+                  <div class="icon">
+                    <img src="./assets/img/icon Development.svg" alt="Development">
+                  </div>
+                  <div class="info">
+                    <div class="label">20 Courses</div>
+                    <div class="tittle">Development</div>
+                  </div>
+                </div>
+
+              <!-- item 3 -->
+                <div class="item">
+                  <div class="icon">
+                    <img src="./assets/img/icon Marketing.svg" alt="Marketing">
+                  </div>
+                  <div class="info">
+                    <div class="label">30 Courses</div>
+                    <div class="tittle">Marketing</div>
+                  </div>
+                </div>
+
+            </div>
+          </div>
+          <!-- Block content -->
+          <div class="content-block">
+            <h1 class="heading">Learn without limits and spread knowledge.</h1>
+            <p class="desc">
+              Build new skills for that “this is my year” feeling with courses, certificates, and degrees from world-class universities and companies.
+            </p>
+            <div class="btn-block">
+              <a class="btn see">See Courses</a>
+              <a class="btn watch">
+                <img src="/assets/img/watch-btn.svg" alt="">
+                  See Courses
+              </a>
+            </div>
+            <div class="status">
+              <div class="title">Recent engagement
+              </div>
+              <div class="info-status">
+                <div class="status-number">
+                  <strong class="focus">50K</strong>Students
+                </div>
+                <div class="status-number">
+                  <strong class="focus">70+</strong>Cources
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 </body>
 </html>
