fix lỗi html link ảnh watch-btn.svg

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="btn-block">
               <a class="btn see">See Courses</a>
               <a class="btn watch">
-                <img src="/assets/img/watch-btn.svg" alt="">
+                <img src="./assets/img/watch-btn.svg" alt="">
                   See Courses
               </a>
             </div>
