--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sen:wght@700&display=swap" rel="stylesheet">
 
+     <!-- Icon -->
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
   <!-- Header -->
@@ -64,7 +66,7 @@
                 </div>
                 <div class="info">
                   <div class="label">20 Courses</div>
-                  <div class="tittle">UI/UX Design</div>
+                  <div class="title">UI/UX Design</div>
                 </div>
               </div>
 
@@ -75,7 +77,7 @@
                   </div>
                   <div class="info">
                     <div class="label">20 Courses</div>
-                    <div class="tittle">Development</div>
+                    <div class="title">Development</div>
                   </div>
                 </div>
 
@@ -86,7 +88,7 @@
                   </div>
                   <div class="info">
                     <div class="label">30 Courses</div>
-                    <div class="tittle">Marketing</div>
+                    <div class="title">Marketing</div>
                   </div>
                 </div>
 
@@ -117,6 +119,84 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  <!-- Popular -->
+    <div class="popular">
+      <div class="content">
+        <div class="body">
+        <!-- Popular-top -->
+          <div class="popular-top">
+            <div class="info">
+              <h2 class="heading-2">Our popular courses</h2>
+              <p class="desc">
+                Build new skills with new trendy courses and shine for the next future career.
+              </p>
+            </div>
+            <div class="slide-btn">
+              <i class="bi bi-chevron-left"></i>
+              <i class="bi bi-chevron-right active"></i>
+            </div>
+          </div>
+        <!-- List courses -->
+          <div class="list-courses">
+            <!-- info courses 1 -->
+            <div class="courses-item">
+              <img src="./assets/img/popular-img-1.png" alt="" class="img-courses">
+              <div class="info-courses">
+                <div class="courses-name">
+                  <div class="title">Basic web design</div>
+                  <div class="stars">
+                    <img src="./assets/img/Star 6.svg" alt="">4.5
+                  </div>
+                </div>
+                <p class="desc line-clamp">Get the best course, gain knowledge and shine for your future career. Get the best course, gain knowledge and shine for your future career.</p>
+                <div class="price">
+                  <span class="pricing">$120.75</span>
+                  <a href="#!" class="btn cta">Book Now</a>
+                </div>
+              </div>
+            </div>
+
+            <!-- info courses 2 -->
+            <div class="courses-item">
+              <img src="./assets/img/popular-img-2.png" alt="" class="img-courses">
+              <div class="info-courses">
+                <div class="courses-name ">
+                  <div class="title">UI/UX design</div>
+                  <div class="stars">
+                    <img src="./assets/img/Star 6.svg" alt="">4.5
+                  </div>
+                </div>
+                <p class="desc line-clamp">Get the best course, gain knowledge and shine for your future career.</p>
+                <div class="price">
+                  <span class="pricing">$120.75</span>
+                  <a href="#!" class="btn cta">Book Now</a>
+                </div>
+              </div>
+            </div>
+
+
+            <!-- info courses 3 -->
+            <div class="courses-item">
+              <img src="./assets/img/popular-img-3.png" alt="" class="img-courses">
+              <div class="info-courses">
+                <div class="courses-name">
+                  <div class="title">Web App design</div>
+                  <div class="stars">
+                    <img src="./assets/img/Star 6.svg" alt="">4.5
+                  </div>
+                </div>
+                <p class="desc line-clamp">Get the best course, gain knowledge and shine for your future career.</p>
+                <div class="price">
+                  <span class="pricing">$120.75</span>
+                  <a href="#!" class="btn cta">Book Now</a>
+                </div>
+              </div>
+            </div>
+            
           </div>
         </div>
       </div>
