--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           <div class="popular-top">
             <div class="info">
               <h2 class="heading-2">Our popular courses</h2>
-              <p class="desc">
+              <p class="desc line-clamp word-break">
                 Build new skills with new trendy courses and shine for the next future career.
               </p>
             </div>
@@ -152,7 +152,7 @@
                     <img src="./assets/img/Star 6.svg" alt="">4.5
                   </div>
                 </div>
-                <p class="desc line-clamp">Get the best course, gain knowledge and shine for your future career. Get the best course, gain knowledge and shine for your future career.</p>
+                <p class="desc line-clamp word-break">Get the best course, gain knowledge and shine for your future career. Get the best course, gain knowledge and shine for your future career.</p>
                 <div class="price">
                   <span class="pricing">$120.75</span>
                   <a href="#!" class="btn cta">Book Now</a>
@@ -189,7 +189,7 @@
                     <img src="./assets/img/Star 6.svg" alt="">4.5
                   </div>
                 </div>
-                <p class="desc line-clamp">Get the best course, gain knowledge and shine for your future career.</p>
+                <p class="desc line-clamp word-break">Get the best course, gain knowledge and shine for your future career.</p>
                 <div class="price">
                   <span class="pricing">$120.75</span>
                   <a href="#!" class="btn cta">Book Now</a>
@@ -201,5 +201,126 @@
         </div>
       </div>
     </div>
+  <!-- Feedback -->
+    <div class="feedback">
+      <div class="content">
+        <div class="feedback-list">
+          <!-- feedback item 1 -->
+          <div class="feedback-item">
+            <div class="user-info">
+              <img src="./assets/img/avar.png" class="avar"></img>
+              <div class="username">Peter Moor</div>
+              <div class="profession">Student of Web Design</div>
+              <div class="slide-btn">
+                <img src="./assets/img/slide-dot-active.svg" alt="" class="dot-active">
+                <img src="./assets/img/slide-dot.svg" alt="" class="dot">
+                <img src="./assets/img/slide-dot.svg" alt="" class="dot">
+              </div>
+            </div>
+            <div class="quote">
+              <img src="./assets/img/icon-quote.svg" class="img-quote"></img>
+              <blockquote class="desc"> Not only does my resume look impressive—filled with the names and logos of world-class institutions—but these certificates also bring me closer to my career goals by validating the skills I've learned."</blockquote>
+            </div>
+          </div>
+  
+          <!-- feedback item 2 -->
+          <div class="feedback-item">
+            <div class="user-info">
+              <img src="./assets/img/avar-2.jpeg" class="avar"></img>
+              <div class="username">Peter Moor</div>
+              <div class="profession">Student of Web Design</div>
+              <div class="slide-btn">
+                <img src="./assets/img/slide-dot.svg" alt="" class="dot">
+                <img src="./assets/img/slide-dot-active.svg" alt="" class="dot-active">
+                <img src="./assets/img/slide-dot.svg" alt="" class="dot">
+              </div>
+            </div>
+            <div class="quote">
+              <img src="./assets/img/icon-quote.svg" class="img-quote"></img>
+              <blockquote class="desc"> Not only does my resume look impressive—filled with the names and logos of world-class institutions—but these certificates also bring me closer to my career goals by validating the skills I've learned."</blockquote>
+            </div>
+          </div>
+          
+          <!-- feedback item 3 -->
+          <div class="feedback-item">
+            <div class="user-info">
+              <img src="./assets/img/avar-3.jpeg" class="avar"></img>
+              <div class="username">Peter Moor</div>
+              <div class="profession">Student of Web Design</div>
+              <div class="slide-btn">
+                <img src="./assets/img/slide-dot.svg" alt="" class="dot">
+                <img src="./assets/img/slide-dot.svg" alt="" class="dot">
+                <img src="./assets/img/slide-dot-active.svg" alt="" class="dot-active">
+              </div>
+            </div>
+            <div class="quote">
+              <img src="./assets/img/icon-quote.svg" class="img-quote"></img>
+              <blockquote class="desc"> Not only does my resume look impressive—filled with the names and logos of world-class institutions—but these certificates also bring me closer to my career goals by validating the skills I've learned."</blockquote>
+            </div>
+          </div>
+      </div>
+        
+      </div>
+    </div>
+  <!-- Features -->
+    <div class="features">
+      <div class="content">
+        <div class="body">
+          <div class="images">
+            <img src="./assets/img/images-1.png" alt="" class="left-img">
+            <img src="./assets/img/images-2.png" alt="" class="right-img">
+          </div>
+          <div class="content-block">
+            <h2 class="heading-2">Learner outcomes through our awesome platform</h2>
+            <p class="desc">87% of people learning for professional development report career benefits like getting a promotion, a raise, or starting a new career.</p>
+            <p class="desc">Lesson Impact Report (2022)</p>
+            <a href="#!" class="btn see">Sign up</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  <!-- CTA -->
+    <div class="cta-block">
+      <div class="content">
+        <div class="body">
+          <div class="content-block">
+            <h2 class="heading-2">Learner outcomes through our awesome platform</h2>
+            <p class="desc">Take the next step toward. Join now to receive personalized  and more recommendations from the full Coursera catalog.</p>
+            <a href="#!" class="btn see">Sign up</a>
+          </div>
+          <img src="./assets/img/images-1.png" alt="" class="cta-img">
+        </div>
+      </div>
+    </div>
+  <!-- Our blog -->
+  <div class="popular">
+    <div class="content">
+      <div class="body">
+      <!-- our blog top -->
+        <div class="blog-top">
+          <div class="info">
+            <h2 class="heading-2">Our blog</h2>
+            <p class="desc word-break">
+              Read our regular travel blog and know the latest update of tour and travel
+            </p>
+          </div>
+        </div>
+      <!-- List news -->
+        <div class="list-courses">
+          <!-- blog 1 -->
+          <div class="blog-item">
+            <img src="./assets/img/popular-img-1.png" alt="" class="img-courses">
+            <div class="info-blog">
+              <div class="title">Basic web design</div>
+              </div>
+              <p class="desc line-clamp word-break">Get the best course, gain knowledge and shine for your future career. Get the best course, gain knowledge and shine for your future career.</p>
+              <div class="price">
+                <span class="pricing">$120.75</span>
+                <a href="#!" class="btn cta">Book Now</a>
+              </div>
+            </div>
+          </div>
+
 </body>
 </html>
